# data_handling

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
.github/workflows/: linting.yaml  tests.yaml
src/data_handling/: __init__.py  data_io.py  main.py
tests/: test_data_io.py
