[project]
name = "data_handling"
version = "1.0.0"
description = "Implement SOLID data input and output methods that look simple from the output. Make them easy to swap as new input and output types are needed by extending the functionality, without modification."
authors = [
  { name = "Anders Henriksen", email = "your@email.com" },
]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.0",
]
[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "ruff",
    "setuptools",
    "wheel",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # <--- CRITICAL: Tells setuptools to look inside src/
include = ["data_handling", "data_handling.*"]
namespaces = false

[tool.coverage.run]
omit = ["tests/*"]

# Ruff configuration: linting and code style
[tool.ruff]
line-length = 120        # Maximum line length
target-version = "py313" # Target Python version

# Linting rules selection
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "N",    # pep8-naming
    "PERF", # performance
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear (common bugs)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "D",    # pydocstyle (docstring conventions)
    "DOC",  # docstring rules
]

# Rules to ignore (customize as needed)
ignore = [
]

# Ruff formatting configuration: code style preferences
[tool.ruff.format]
quote-style = "double"            # Use double quotes for strings
indent-style = "space"            # Use spaces for indentation
skip-magic-trailing-comma = false # Respect magic trailing commas
line-ending = "auto"              # Automatically detect line endings

# Import sorting configuration (isort replacement)
[tool.ruff.lint.isort]
force-single-line = false      # Allow multiple imports per line
split-on-trailing-comma = true # Split imports on trailing comma

# Mypy configuration: type checking
[tool.mypy]
python_version = "3.13" # Target Python version
strict = true           # Enable all strict type checking options

# Import handling
ignore_missing_imports = true # Avoid errors for pandas and similar libraries
follow_imports = "normal"     # Follow imports for type checking
